--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "date-fns": "^2.27.0",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
+    "expo-cli": "^5.0.3",
     "expo-font": "~10.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.13",
+    "global": "^4.4.0",
     "lottie-react-native": "4.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -35,7 +37,8 @@
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
